# compiz-plugins-extra

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README.md  autogen.sh  compiz-animationaddon.pc.in  configure.ac
icons/: Makefile.am
images/: Makefile.am
include/: Makefile.am  compiz-animationaddon.h
metadata/: 3d.xml.in  Makefile.am  Makefile.in  addhelper.xml  addhelper.xml.in  animationaddon.xml.in  bell.xml.in  bench.xml  bench.xml.in  bicubic.xml.in  crashhandler.xml  crashhandler.xml.in  cubeaddon.xml.in  cubecaps.xml.in  cubereflex.xml  cubereflex.xml.in  extrawm.xml  extrawm.xml.in  fadedesktop.xml  firepaint.xml  firepaint.xml.in  gears.xml.in  gotovp.xml.in  grid.xml.in  group.xml  group.xml.in  highlightcontent.xml.in  loginout.xml.in  maximumize.xml.in  mblur.xml  mblur.xml.in  mswitch.xml.in  notification.xml.in  reflex.xml  reflex.xml.in  scalefilter.xml.in  shelf.xml.in  showdesktop.xml.in  showmouse.xml.in  splash.xml  (+7 more)
po/: Makevars  POTFILES.in  ar.po  bn.po  ca.po  compiz-plugins-extra.pot  cs.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
src/: Makefile.am
src/3d/: 3d.c  CMakeLists.txt  Makefile.am
src/addhelper/: CMakeLists.txt  Makefile.am  addhelper.c
src/animationaddon/: CMakeLists.txt  Makefile  Makefile.am  airplane3d.c  animationaddon.c  animationaddon.h  beamup.c  burn.c  domino.c  explode3d.c  fold3d.c  glide3.c  leafspread.c  particle.c  polygon.c  skewer.c
src/bell/: Makefile.am  bell.c
src/bench/: CMakeLists.txt  Makefile.am  bench.c  bench_tex.h
src/bicubic/: CMakeLists.txt  Makefile.am  bicubic.c
src/crashhandler/: CMakeLists.txt  Makefile.am  crashhandler.c
src/cubeaddon/: CMakeLists.txt  Makefile.am  cubeaddon.c
src/cubecaps/: Makefile.am  cubecaps.c
src/cubereflex/: Makefile.am  cubereflex.c
src/extrawm/: CMakeLists.txt  Makefile.am  extrawm.c
src/fadedesktop/: CMakeLists.txt  Makefile.am  fadedesktop.c
src/firepaint/: CMakeLists.txt  Makefile.am  firepaint.c  firepaint_tex.h
src/gears/: CMakeLists.txt  Makefile.am  gears.c
src/goto-viewport/: Makefile.am  gotovp.c
src/grid/: CMakeLists.txt  Makefile.am  grid.c
src/group/: CMakeLists.txt  Makefile.am  cairo.c  group-internal.h  group.c  group.h  group_glow.h  init.c  paint.c  queues.c  selection.c  tab.c
src/highlightcontent/: Makefile.am  highlightcontent.c
src/loginout/: CMakeLists.txt  Makefile.am  loginout.c
src/maximumize/: CMakeLists.txt  Makefile.am  maximumize.c
src/mblur/: CMakeLists.txt  Makefile.am  mblur.c
src/mswitch/: mswitch.c
src/notification/: CMakeLists.txt  Makefile.am  notification.c
src/reflex/: CMakeLists.txt  Makefile.am  reflex.c
src/scalefilter/: CMakeLists.txt  Makefile.am  scalefilter.c
src/shelf/: CMakeLists.txt  Makefile.am  shelf.c
src/showdesktop/: CMakeLists.txt  Makefile.am  showdesktop.c
src/showmouse/: CMakeLists.txt  Makefile.am  showmouse.c  showmouse_tex.h
src/splash/: CMakeLists.txt  Makefile.am  splash.c
src/trailfocus/: CMakeLists.txt  Makefile.am  trailfocus.c
src/vidcap/: Makefile.am  vidcap.c
src/wallpaper/: CMakeLists.txt  Makefile.am  wallpaper.c
src/widget/: CMakeLists.txt  Makefile.am  widget.c
