## Process this file with automake to produce Makefile.in
SUBDIRS = 3d \
	  addhelper \
	  bench \
	  bicubic \
	  crashhandler \
	  cubeaddon \
	  extrawm \
	  fadedesktop \
	  firepaint \
	  gears \
	  group \
	  maximumize \
	  mblur \
	  notification \
	  reflex \
	  scalefilter \
	  shelf \
	  showdesktop \
	  splash \
	  trailfocus \
	  widget \
	  showmouse \
	  loginout \
	  wallpaper
