## Process this file with automake to produce Makefile.in
SUBDIRS = 3d \
	  addhelper \
	  animationaddon \
	  bell \
	  bench \
	  bicubic \
	  crashhandler \
	  cubeaddon \
	  extrawm \
	  fadedesktop \
	  firepaint \
	  gears \
	  grid \
	  group \
	  highlightcontent \
	  maximumize \
	  mblur \
	  notification \
	  reflex \
	  scalefilter \
	  shelf \
	  showdesktop \
	  splash \
	  trailfocus \
	  widget \
	  showmouse \
	  loginout \
	  vidcap \
	  wallpaper
